--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,19 +2,19 @@
 
 .container {
   color: var(--color-text);
-  margin-top: 120px;
-  background-color: var(--color-secondary);
+  margin-top: 50px;
+  background-color: var(--color-dark);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   width: 100vw;
   padding: 58px 10%;
-  gap: 10px;
+  gap: 2px;
 }
 
 .text h2 {
   font-size: 80px;
-  font-weight: 700;
+  font-weight: 50;
   letter-spacing: 4px;
 }
 
@@ -23,11 +23,55 @@
   font-weight: 400;
   letter-spacing: 2px;
 }
+.text1 {
+  margin: 15px 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.1rem;
+}
+
+input,
+textarea {
+  width: 400px;
+  margin: 2px;
+  padding: 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  gap: 5px;
+}
+
+textarea {
+  height: 70px;
+}
+
+.button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 400px;
+  padding: 0.75rem;
+  border: none;
+  border-radius: 50px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+.button:hover {
+  background: #0044ff;
+}
 
 .links {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   list-style: none;
   gap: 26px;
 }
@@ -50,12 +94,44 @@
   .container {
     flex-direction: column;
     gap: 23px;
+    align-items: center;
+    justify-content: space-between;
   }
-
   .text {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+  }
+  .form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 0.1rem;
+  }
+  input,
+  textarea {
+    width: 350px;
+    margin: 2px;
+    padding: 0.75rem;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    gap: 2px;
+  }
+
+  textarea {
+    height: 100px;
+  }
+
+  .button {
+    margin: 10px;
+    width: 100px;
+    padding: 0.75rem;
+    border: none;
+    border-radius: 10px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
   }
 
   .links {
