--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -78,9 +78,8 @@
     border-radius: 10px;
     background: rgb(25, 55, 109);
     background: linear-gradient(
-      0deg,
-      rgba(25, 55, 109, 0.2) 0%,
-      rgba(25, 55, 109, 1) 100%
+      rgb(66, 83, 241) 0%,
+      rgb(32, 85, 155) 10 rgb(22, 35, 114) 100%
     );
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
