--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -42,7 +42,7 @@
 
 .contactBtn {
   text-decoration: none;
-  background-color: rgb(8, 172, 163);
+  background-color: rgb(16, 146, 140);
   color: var(--color-text);
   border-radius: 100px;
   font-size: 25px;
@@ -51,7 +51,11 @@
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
 .contactBtn:hover {
-  background: rgb(2, 184, 230);
+  background: rgb(3, 165, 206);
+}
+.contactBtn:active {
+  background: rgb(3, 205, 255);
+  transform: scale(1.05);
 }
 .heroImg {
   width: 50%;
