--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -61,3 +61,10 @@
   background: var(--color-primary);
   padding: 1px 22px;
 }
+.link:hover {
+  background: rgb(48, 89, 179);
+}
+.link:active {
+  background: rgb(41, 100, 228);
+  /* transform: scale(1.05); */
+}
